--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -30,8 +30,10 @@
   "continueAsGuest": "الاستمرار كضيف",
   "copiedToClipboard": "نسخ إلى الحافظة",
   "createAccount": "إنشاء حساب",
+  "developer": "Developer",
   "dexRepair": "إصلاح DEX",
   "dexRepairDesc": "إصلاح ملفات DEX",
+  "donate": "Donate",
   "downloadedModels": "النماذج المحمّلة:",
   "downloading": "تنزيل...",
   "downloadModel": "تحميل نموذج:",
@@ -81,7 +83,9 @@
   },
   "largeModelWarning": "نموذج تحذير كبير",
   "later": "لاحقاً",
+  "licenses": "Licenses",
   "login": "تسجيل الدخول",
+  "mail": "Mail",
   "merge": "دمج",
   "mergeSplitApks": "دمج انقسام APKs",
   "mergeUnsupportedOnWeb": "تقسيم دمج APK غير ممكن في إصدار الويب.",
