--- a/lib/l10n/app_cs.arb
+++ b/lib/l10n/app_cs.arb
@@ -30,8 +30,10 @@
   "continueAsGuest": "Pokračovat jako hosta",
   "copiedToClipboard": "Zkopírováno do schránky",
   "createAccount": "Vytvořit účet",
+  "developer": "Developer",
   "dexRepair": "Dex oprava",
   "dexRepairDesc": "Opravit soubory DEX",
+  "donate": "Donate",
   "downloadedModels": "Stažené modely:",
   "downloading": "Stahování...",
   "downloadModel": "Stáhnout model:",
@@ -81,7 +83,9 @@
   },
   "largeModelWarning": "Varování velkého modelu",
   "later": "Později",
+  "licenses": "Licenses",
   "login": "Přihlásit se",
+  "mail": "Mail",
   "merge": "Sloučit",
   "mergeSplitApks": "Sloučit rozdělené APK",
   "mergeUnsupportedOnWeb": "Sloučení APK není možné rozdělit ve webové verzi.",
