--- a/lib/l10n/app_da.arb
+++ b/lib/l10n/app_da.arb
@@ -30,8 +30,10 @@
   "continueAsGuest": "Fortsæt som gæst",
   "copiedToClipboard": "Kopieret til udklipsholder",
   "createAccount": "Opret Konto",
+  "developer": "Developer",
   "dexRepair": "Dex Reparation",
   "dexRepairDesc": "Reparer DEX filer",
+  "donate": "Donate",
   "downloadedModels": "Downloadede Modeller:",
   "downloading": "Downloader...",
   "downloadModel": "Download en model:",
@@ -81,7 +83,9 @@
   },
   "largeModelWarning": "Stor Model Advarsel",
   "later": "Senere",
+  "licenses": "Licenses",
   "login": "Login",
+  "mail": "Mail",
   "merge": "Flet",
   "mergeSplitApks": "Flet Split APKs",
   "mergeUnsupportedOnWeb": "Split APK sammenlægning er ikke muligt i web-versionen.",
