--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -30,8 +30,10 @@
   "continueAsGuest": "Als Gast fortfahren",
   "copiedToClipboard": "In Zwischenablage kopiert",
   "createAccount": "Konto erstellen",
+  "developer": "Developer",
   "dexRepair": "Dex Reparatur",
   "dexRepairDesc": "DEX-Dateien reparieren",
+  "donate": "Donate",
   "downloadedModels": "Heruntergeladene Modelle:",
   "downloading": "Herunterladen...",
   "downloadModel": "Modell herunterladen:",
@@ -81,7 +83,9 @@
   },
   "largeModelWarning": "Große Modellwarnung",
   "later": "Später",
+  "licenses": "Licenses",
   "login": "Anmelden",
+  "mail": "Mail",
   "merge": "Zusammenführen",
   "mergeSplitApks": "Split APKs zusammenführen",
   "mergeUnsupportedOnWeb": "Split APK Zusammenführung ist in der Web-Version nicht möglich.",
