--- a/lib/l10n/app_el.arb
+++ b/lib/l10n/app_el.arb
@@ -30,8 +30,10 @@
   "continueAsGuest": "Συνέχεια ως επισκέπτης",
   "copiedToClipboard": "Αντιγράφηκε στο πρόχειρο",
   "createAccount": "Δημιουργία Λογαριασμού",
+  "developer": "Developer",
   "dexRepair": "Επισκευή Dex",
   "dexRepairDesc": "Επισκευή αρχείων DEX",
+  "donate": "Donate",
   "downloadedModels": "Κατεβασμένα Μοντέλα:",
   "downloading": "Λήψη...",
   "downloadModel": "Κατεβάστε ένα μοντέλο:",
@@ -81,7 +83,9 @@
   },
   "largeModelWarning": "Προειδοποίηση Μεγάλου Μοντέλου",
   "later": "Αργότερα",
+  "licenses": "Licenses",
   "login": "Είσοδος",
+  "mail": "Mail",
   "merge": "Συγχώνευση",
   "mergeSplitApks": "Συγχώνευση Διαχωρισμού Apk",
   "mergeUnsupportedOnWeb": "Ο διαχωρισμός της συγχώνευσης APK δεν είναι δυνατός στην έκδοση web.",
