--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -30,8 +30,10 @@
   "continueAsGuest": "Continuar como invitado",
   "copiedToClipboard": "Copiado al portapapeles",
   "createAccount": "Crear cuenta",
+  "developer": "Developer",
   "dexRepair": "Reparación de Dex",
   "dexRepairDesc": "Reparar archivos DEX",
+  "donate": "Donate",
   "downloadedModels": "Modelos Descargados:",
   "downloading": "Descargando...",
   "downloadModel": "Descargar un modelo:",
@@ -81,7 +83,9 @@
   },
   "largeModelWarning": "Advertencia de modelo grande",
   "later": "Luego",
+  "licenses": "Licenses",
   "login": "Iniciar sesión",
+  "mail": "Mail",
   "merge": "Fusionar",
   "mergeSplitApks": "Fusionar APK divididos",
   "mergeUnsupportedOnWeb": "La fusión de APK divididos no es posible en la versión web.",
