--- a/lib/l10n/app_fi.arb
+++ b/lib/l10n/app_fi.arb
@@ -30,8 +30,10 @@
   "continueAsGuest": "Jatka vieraana",
   "copiedToClipboard": "Kopioitu leikepöydälle",
   "createAccount": "Luo Tili",
+  "developer": "Developer",
   "dexRepair": "Dex Korjaus",
   "dexRepairDesc": "Korjaa DEX-tiedostot",
+  "donate": "Donate",
   "downloadedModels": "Ladatut Mallit:",
   "downloading": "Ladataan...",
   "downloadModel": "Lataa malli:",
@@ -81,7 +83,9 @@
   },
   "largeModelWarning": "Suuri Malli Varoitus",
   "later": "Myöhemmin",
+  "licenses": "Licenses",
   "login": "Kirjaudu",
+  "mail": "Mail",
   "merge": "Yhdistä",
   "mergeSplitApks": "Yhdistä Jaetut APK:t",
   "mergeUnsupportedOnWeb": "Jaettu APK yhdistäminen ei ole mahdollista web-versiossa.",
