--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -30,8 +30,10 @@
   "continueAsGuest": "Continua come ospite",
   "copiedToClipboard": "Copiato negli appunti",
   "createAccount": "Crea Account",
+  "developer": "Developer",
   "dexRepair": "Riparazione Dex",
   "dexRepairDesc": "Ripara file DEX",
+  "donate": "Donate",
   "downloadedModels": "Modelli Scaricati:",
   "downloading": "Scaricamento...",
   "downloadModel": "Scarica un modello:",
@@ -81,7 +83,9 @@
   },
   "largeModelWarning": "Avviso Modello Grande",
   "later": "Dopo",
+  "licenses": "Licenses",
   "login": "Accedi",
+  "mail": "Mail",
   "merge": "Unisci",
   "mergeSplitApks": "Unisci APK Divisi",
   "mergeUnsupportedOnWeb": "Dividere l'unione APK non è possibile nella versione web.",
