--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -30,8 +30,10 @@
   "continueAsGuest": "ゲストとして続ける",
   "copiedToClipboard": "クリップボードにコピーしました",
   "createAccount": "アカウントを作成",
+  "developer": "Developer",
   "dexRepair": "デックス修理",
   "dexRepairDesc": "DEXファイルの修復",
+  "donate": "Donate",
   "downloadedModels": "ダウンロードしたモデル：",
   "downloading": "ダウンロード中...",
   "downloadModel": "モデルをダウンロード:",
@@ -81,7 +83,9 @@
   },
   "largeModelWarning": "大型モデルの警告",
   "later": "後で",
+  "licenses": "Licenses",
   "login": "ログイン",
+  "mail": "Mail",
   "merge": "結合",
   "mergeSplitApks": "分割APKを統合",
   "mergeUnsupportedOnWeb": "Web版ではスプリットAPKマージはできません。",
