--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -30,8 +30,10 @@
   "continueAsGuest": "Doorgaan als gast",
   "copiedToClipboard": "Gekopieerd naar klembord",
   "createAccount": "Account Aanmaken",
+  "developer": "Developer",
   "dexRepair": "Dex Reparatie",
   "dexRepairDesc": "Repareer DEX bestanden",
+  "donate": "Donate",
   "downloadedModels": "Gedownloade modellen:",
   "downloading": "Downloadenchar@@0",
   "downloadModel": "Download een model:",
@@ -81,7 +83,9 @@
   },
   "largeModelWarning": "Waarschuwing groot model",
   "later": "Later",
+  "licenses": "Licenses",
   "login": "Aanmelden",
+  "mail": "Mail",
   "merge": "Samenvoegen",
   "mergeSplitApks": "Split-APK's samenvoegen",
   "mergeUnsupportedOnWeb": "Samenvoegen van de APK is niet mogelijk in de webversie.",
