--- a/lib/l10n/app_no.arb
+++ b/lib/l10n/app_no.arb
@@ -30,8 +30,10 @@
   "continueAsGuest": "Fortsett som gjest",
   "copiedToClipboard": "Kopiert til utklippstavle",
   "createAccount": "Opprett konto",
+  "developer": "Developer",
   "dexRepair": "Dex reparasjon",
   "dexRepairDesc": "Reparer DEX filer",
+  "donate": "Donate",
   "downloadedModels": "Lastede modeller:",
   "downloading": "Laster ned...",
   "downloadModel": "Last ned modell:",
@@ -81,7 +83,9 @@
   },
   "largeModelWarning": "Stor modell advarsel",
   "later": "Senere",
+  "licenses": "Licenses",
   "login": "Innlogging",
+  "mail": "Mail",
   "merge": "Flett",
   "mergeSplitApks": "Slå sammen delte APKer",
   "mergeUnsupportedOnWeb": "Splitt APK sammenslåing er ikke mulig i nettversjonen.",
