--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -30,8 +30,10 @@
   "continueAsGuest": "Kontynuuj jako gość",
   "copiedToClipboard": "Skopiowano do schowka",
   "createAccount": "Utwórz konto",
+  "developer": "Developer",
   "dexRepair": "Naprawa dex",
   "dexRepairDesc": "Napraw pliki DEX",
+  "donate": "Donate",
   "downloadedModels": "Pobrane Modele:",
   "downloading": "Pobieranie...",
   "downloadModel": "Pobierz model:",
@@ -81,7 +83,9 @@
   },
   "largeModelWarning": "Ostrzeżenie o dużym modelu",
   "later": "Później",
+  "licenses": "Licenses",
   "login": "Logowanie",
+  "mail": "Mail",
   "merge": "Połącz",
   "mergeSplitApks": "Scalanie podzielonych APK",
   "mergeUnsupportedOnWeb": "Split APK nie jest możliwy w wersji internetowej.",
