--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -30,8 +30,10 @@
   "continueAsGuest": "Continuar como Convidado",
   "copiedToClipboard": "Copiado para o clipboard",
   "createAccount": "Criar conta",
+  "developer": "Developer",
   "dexRepair": "Reparo de Dex",
   "dexRepairDesc": "Reparar arquivos DEX",
+  "donate": "Donate",
   "downloadedModels": "Modelos baixados:",
   "downloading": "Baixando...",
   "downloadModel": "Baixar um modelo:",
@@ -81,7 +83,9 @@
   },
   "largeModelWarning": "Aviso do Modelo Grande",
   "later": "Mais tarde",
+  "licenses": "Licenses",
   "login": "Conectar-se",
+  "mail": "Mail",
   "merge": "Mesclar",
   "mergeSplitApks": "Fundir APKs divididos",
   "mergeUnsupportedOnWeb": "Não é possível a fusão de APK dividida na versão web.",
