--- a/lib/l10n/app_ro.arb
+++ b/lib/l10n/app_ro.arb
@@ -30,8 +30,10 @@
   "continueAsGuest": "Continuă ca Vizitator",
   "copiedToClipboard": "Copiat în clipboard",
   "createAccount": "Creare cont",
+  "developer": "Developer",
   "dexRepair": "Reparație Dex",
   "dexRepairDesc": "Repară fişierele DEX",
+  "donate": "Donate",
   "downloadedModels": "Modele descărcate:",
   "downloading": "Descărcare...",
   "downloadModel": "Descarcă un model:",
@@ -81,7 +83,9 @@
   },
   "largeModelWarning": "Avertizare model mare",
   "later": "Mai târziu",
+  "licenses": "Licenses",
   "login": "Autentificare",
+  "mail": "Mail",
   "merge": "Îmbinare",
   "mergeSplitApks": "Îmbinare APK-uri",
   "mergeUnsupportedOnWeb": "Fuzionarea Split APK nu este posibilă în versiunea web.",
