--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -30,8 +30,10 @@
   "continueAsGuest": "Продолжить как гость",
   "copiedToClipboard": "Скопировано в буфер обмена",
   "createAccount": "Создать Аккаунт",
+  "developer": "Developer",
   "dexRepair": "Ремонт",
   "dexRepairDesc": "Восстановление DEX файлов",
+  "donate": "Donate",
   "downloadedModels": "Загруженные модели:",
   "downloading": "Загрузка...",
   "downloadModel": "Скачать модель:",
@@ -81,7 +83,9 @@
   },
   "largeModelWarning": "Большое предупреждение модели",
   "later": "Позже",
+  "licenses": "Licenses",
   "login": "Логин",
+  "mail": "Mail",
   "merge": "Объединить",
   "mergeSplitApks": "Объединить API",
   "mergeUnsupportedOnWeb": "Слияние Split APK в веб-версии невозможно.",
