--- a/lib/l10n/app_sv.arb
+++ b/lib/l10n/app_sv.arb
@@ -30,8 +30,10 @@
   "continueAsGuest": "Fortsätt som gäst",
   "copiedToClipboard": "Kopierad till urklipp",
   "createAccount": "Skapa konto",
+  "developer": "Developer",
   "dexRepair": "Dex Reparation",
   "dexRepairDesc": "Reparera DEX-filer",
+  "donate": "Donate",
   "downloadedModels": "Nedladdade modeller:",
   "downloading": "Hämtar...",
   "downloadModel": "Ladda ner en modell:",
@@ -81,7 +83,9 @@
   },
   "largeModelWarning": "Stor modell varning",
   "later": "Senare",
+  "licenses": "Licenses",
   "login": "Inloggning",
+  "mail": "Mail",
   "merge": "Sammanfoga",
   "mergeSplitApks": "Slå ihop delade APK:er",
   "mergeUnsupportedOnWeb": "Delad APK-sammanslagning är inte möjligt i webbversionen.",
