--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -30,8 +30,10 @@
   "continueAsGuest": "Misafir olarak devam et",
   "copiedToClipboard": "Panoya kopyala",
   "createAccount": "Hesap Oluştur",
+  "developer": "Developer",
   "dexRepair": "Dex Onarımı",
   "dexRepairDesc": "DEX dosyalarını düzelt",
+  "donate": "Donate",
   "downloadedModels": "İndirilen Modeller:",
   "downloading": "İndiriliyor...",
   "downloadModel": "Model indir:",
@@ -81,7 +83,9 @@
   },
   "largeModelWarning": "Büyük Model Uyarısı",
   "later": "Daha sonra",
+  "licenses": "Licenses",
   "login": "Giriş",
+  "mail": "Mail",
   "merge": "Birleştir",
   "mergeSplitApks": "Bölünmüş APKs dosyalarını birleştir",
   "mergeUnsupportedOnWeb": "Web sürümünde bölünmüş APK birleştirme işlemi yapılamaz.",
