--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -30,8 +30,10 @@
   "continueAsGuest": "Продовжити як гість",
   "copiedToClipboard": "Скопійовано до буферу обміну",
   "createAccount": "Створити обл. запис",
+  "developer": "Developer",
   "dexRepair": "Відновити",
   "dexRepairDesc": "Відновлення файлів DEX",
+  "donate": "Donate",
   "downloadedModels": "Завантажені моделі:",
   "downloading": "Завантаження...",
   "downloadModel": "Завантажити модель:",
@@ -81,7 +83,9 @@
   },
   "largeModelWarning": "Попередження про довгу модель",
   "later": "Пізніше",
+  "licenses": "Licenses",
   "login": "Логін",
+  "mail": "Mail",
   "merge": "Об'єднати",
   "mergeSplitApks": "Об'єднати розділені APK",
   "mergeUnsupportedOnWeb": "Розділення злиття APK неможливе у веб-версії.",
