--- a/lib/l10n/app_sr.arb
+++ b/lib/l10n/app_sr.arb
@@ -30,8 +30,10 @@
   "continueAsGuest": "Continue as Guest",
   "copiedToClipboard": "Copied to clipboard",
   "createAccount": "Create Account",
+  "developer": "Developer",
   "dexRepair": "Dex Repair",
   "dexRepairDesc": "Repair DEX files",
+  "donate": "Donate",
   "downloadedModels": "Downloaded Models:",
   "downloading": "Downloading...",
   "downloadModel": "Download a model:",
@@ -81,7 +83,9 @@
   },
   "largeModelWarning": "Large Model Warning",
   "later": "Later",
+  "licenses": "Licenses",
   "login": "Login",
+  "mail": "Mail",
   "merge": "Merge",
   "mergeSplitApks": "Merge Split APKs",
   "mergeUnsupportedOnWeb": "Split APK merging is not possible in the web version.",
