New Crowdin updates (#15)
* New translations app_en.arb (Arabic)

* New translations app_en.arb (Arabic)

* New translations app_en.arb (Arabic)

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -5,13 +5,13 @@
   "analyzing": "تحليل...",
   "apiKey": "مفتاح API",
   "apiRateLimits": "حدود معدل نقاط نهاية API",
-  "apksToApk": "APKS إلى APK",
+  "apksToApk": "مجمع APKS",
   "appDescription": "مجموعة من أدوات الهندسة العكسية.",
   "appTitle": "Revengi",
   "batteryOptimization": "تحسين البطارية",
   "batteryOptimizationMessage": "بالنسبة إلى Android 13 وما فوق ، نحتاج إلى تعطيل تحسين البطارية لهذا التطبيق للعمل بشكل صحيح في الخلفية.",
-  "blutter": "بلتر",
-  "blutterDesc": "أداة التحليل الثنائي رفرفة",
+  "blutter": "أداة بلاتر",
+  "blutterDesc": "تحليل بنية كود تطبيقات الفلاتر",
   "blutterNote": "\nAPK: The app will directly handle APK files.\n\r\nZIP: Ensure ZIP files contain only the `libapp.so` for arm64 architecture. Failure to comply may result in errors.",
   "cancel": "يلغي",
   "chat": "المحادثة",
@@ -31,8 +31,8 @@
   "copiedToClipboard": "نسخ إلى الحافظة",
   "createAccount": "إنشاء حساب",
   "developer": "المطور",
-  "dexRepair": "إصلاح DEX",
-  "dexRepairDesc": "إصلاح ملفات DEX",
+  "dexRepair": "إصلاح الديكس",
+  "dexRepairDesc": "تصحيح بنية ملفات. dex",
   "donate": "تبرع",
   "downloadedModels": "تحميل محرك:",
   "downloading": "جارى التنزيل ...",
@@ -62,8 +62,8 @@
   },
   "featureNeedsApp": "الرجاء استخدام تطبيق سطح المكتب أو الجوال لهذه الميزة.",
   "fetchingModelInfo": "جلب معلومات النموذج...",
-  "flutterAnalysis": "تحليل الرفرفة",
-  "flutterAnalysisDesc": "تحليل libs رفرفة",
+  "flutterAnalysis": "تحليل تطبيقات الفلاتر",
+  "flutterAnalysisDesc": "عرض معلومات ملفات الفلاتر",
   "generate": "توليد",
   "generating": "توليد ...",
   "guestNotAllowed": "لا يمكن للمستخدمين الضيوف استخدام هذه الميزة",
@@ -71,7 +71,7 @@
   "iLoveThisApp": "أنا آسف، أحب هذا التطبيق",
   "jniAnalysis": "تحليل ملفات lib",
   "jniAnalysisDesc": "تحليل هيكل ملفات ال\".so\" داخل التطبيق",
-  "language": "اللغة: {languageCode}",
+  "language": "لغة التطبيق : {languageCode}",
   "@language": {
     "description": "Language code",
     "placeholders": {
@@ -87,11 +87,11 @@
   "login": "تسجيل الدخول",
   "mail": "البريد",
   "merge": "دمج",
-  "mergeSplitApks": "دمج انقسام APKs",
+  "mergeSplitApks": "دمج التطبيق المقسم لملف واحد",
   "mergeUnsupportedOnWeb": "تقسيم دمج APK غير ممكن في إصدار الويب.",
   "models": "المحركات",
-  "mtHook": "هوك",
-  "mtHookDesc": "توليد خطافات محسنة MT",
+  "mtHook": "قتل توقيع MT",
+  "mtHookDesc": "حقن كود قتل التوقيع مثل MT",
   "noFileSelected": "لم يتم تحديد ملف",
   "ok": "نعم",
   "ollama_api_url": "عنوان ULLAMA BASE URL",
@@ -109,7 +109,7 @@
   "password": "كلمة المرور",
   "pathToApkeditorJar": "المسار إلى جرس المحرر",
   "pleaseConfirmPassword": "الرجاء تأكيد كلمة المرور",
-  "preferences": "التفضيلات",
+  "preferences": "الإعدادات",
   "proceed": "المتابعة",
   "profile": "حساب تعريفي",
   "register": "تسجيل",
@@ -142,7 +142,7 @@
       }
     }
   },
-  "selectLanguage": "حدد اللغة",
+  "selectLanguage": "إختيار لغة التطبيق",
   "selectOrDownloadModel": "حسناً ، قم تنزيل محرك (أو أختيار محرك منزل مسبقاً) من خانة \"المحركات\".",
   "selectValidFile": "الرجاء تحديد ملف {type} صالح",
   "@selectValidFile": {
@@ -158,7 +158,7 @@
   "suggestLogin": "لديك حساب؟ تسجيل الدخول",
   "suggestRegister": "هل تحتاج إلى حساب؟ سجل",
   "systemMessage": "رسالة النظام",
-  "theme": "سمة",
+  "theme": "المظهر",
   "typeMessage": "اكتب رسالتك…",
   "uninstallWarning": "كنت على وشك إلغاء تثبيت التطبيق أليس كذلك؟",
   "unsupportedDartVersion": "حاليا RevEngi يدعم فقط قناة مستقرة\n\nالإصدار الحالي لدارت: {dartversion}",
